--- a/style.css
+++ b/style.css
@@ -12,3 +12,15 @@ header{
 /* canvas{
     border: 1px solid black;
 } */
+html,
+  body
+  {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  #arkhamCity {
+    background-color: #ffffff;
+  }
